--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.6",
     "socket.io": "^1.5.1"
+  },
+  "scripts": {
+   "start": "node server.js",
+   "postinstall": "bower install"
   }
 }
