--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "socket.io": "^1.5.1"
   },
   "scripts": {
-   "start": "node server.js",
-   "postinstall": "bower install"
+    "postinstall": "node.exe public/bower install"
   }
 }
