--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "socket.io": "^1.5.1"
   },
   "scripts": {
-    "postinstall": "node.exe public/bower install"
+    "postinstall": "node ./node_modules/bower/bin/bower install" 
   }
 }
