--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "moment": "^2.16.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.6",
-    "socket.io": "^1.5.1"
+    "socket.io": "^1.5.1",
+    "bower": "^1.3.2"
   },
   "scripts": {
-    "postinstall": "node ./node_modules/bower/bin/bower install" 
+    "postinstall": "node ./node_modules/bower/bin/bower install"
   }
 }
