--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "bower": "^1.3.2"
   },
   "scripts": {
-    "postinstall": "node ./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   }
 }
